# fastpkg

./: README.md  fastpkg.py  pyproject.toml  setup.py
